Add evil-goggles and hook them to prog mode

--- a/config.org
+++ b/config.org
@@ -1385,6 +1385,11 @@ Maps numbers to windows on screen, allows switching windows by window number
         ispell-dictionary   "deutsch") ; Default dictionary to use -> ispell-hunspell-dictionary-alist
 #+END_SRC
 
+** Goggles
+#+BEGIN_SRC emacs-lisp
+  (use-package evil-goggles :ensure t)
+
+#+END_SRC
 
 * ProgMode
 #+begin_src emacs-lisp
@@ -1402,6 +1407,7 @@ Maps numbers to windows on screen, allows switching windows by window number
 ;;(add-hook 'prog-mode-hook 'whitespace-mode)
 (add-hook 'prog-mode-hook 'show-paren-mode)
 (add-hook 'prog-mode-hook 'hl-line-mode)
+(add-hook 'prog-mode-hook 'evil-goggles-mode)
 #+end_src
 
 
