--- a/config.org
+++ b/config.org
@@ -1385,6 +1385,11 @@ Maps numbers to windows on screen, allows switching windows by window number
         ispell-dictionary   "deutsch") ; Default dictionary to use -> ispell-hunspell-dictionary-alist
 #+END_SRC
 
+** Htmlize
+#+BEGIN_SRC emacs-lisp
+(use-package htmlize :ensure t)
+#+END_SRC
+
 ** Goggles
 #+BEGIN_SRC emacs-lisp
   (use-package evil-goggles :ensure t)
