--- a/config.org
+++ b/config.org
@@ -1623,59 +1623,67 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
 (evil-add-command-properties #'omnisharp-go-to-definition :jump t)
 ;;(evil-add-command-properties #'evil-previous-line :jump t)
 ;;(evil-add-command-properties #'evil-next-line :jump t)
-#+END_SRC
+
+;(set-face-bold-p 'bold nil) ; disable bold font (didnt work)
+(mapc ; disable bold font
+  (lambda (face)
+    (set-face-attribute face nil :weight 'normal :underline nil))
+  (face-list))
 #+END_SRC
 
 
 * Theme Test
 #+BEGIN_SRC emacs-lisp
-  ;;  (defface special-comment '((t (:background "#fafafa" :foreground "#fafafa"))) "Green")
-    (defface extra-comment '((t (:background "#fbf8ef" :foreground "#fafafa"))) "Green")
+    ;;  (defface special-comment '((t (:background "#fafafa" :foreground "#fafafa"))) "Green")
+      (defface extra-comment '((t (:background "#fbf8ef" :foreground "#fafafa"))) "Green")
 
-    ;;(defface extra-comment '((t (:foreground "#ffffff"))) "Cyan")
+      ;;(defface extra-comment '((t (:foreground "#ffffff"))) "Cyan")
 
-    (font-lock-add-keywords
-     'prog-mode '(("\\(\\b\\|[[:graph:]]\\)\\( \\)" (1 'extr-comment -1) (2 'extra-comment t))))
-     ;'typescript-mode '(("\\(\\b\\|[[:graph:]]\\)\\( \\)" (1 'extr-comment -1) (2 'extra-comment t))))
+      (font-lock-add-keywords
+       'prog-mode '(("\\(\\b\\|[[:graph:]]\\)\\( \\)" (1 'extr-comment -1) (2 'extra-comment t))))
+       ;'typescript-mode '(("\\(\\b\\|[[:graph:]]\\)\\( \\)" (1 'extr-comment -1) (2 'extra-comment t))))
 
-    (setq whitespace-space-regexp "\\(^ +\\| +$\\)") ; defines what should be matched as space, whitespaces that are not matched get default styling..
+      (setq whitespace-space-regexp "\\(^ +\\| +$\\)") ; defines what should be matched as space, whitespaces that are not matched get default styling..
 
-    (setq whitespace-display-mappings
-          '((space-mark   32     [183]     [46]) ; space
-            (space-mark   160    [164]     [95]) ; hard space
-            (newline-mark ?\n    [?\n]) ; remove $ to not display it
-            (tab-mark     ?\t    [?\u00BB ?\t] [?\\ ?\t])))
+      (setq whitespace-display-mappings
+            '((space-mark   32     [183]     [46]) ; space
+              (space-mark   160    [164]     [95]) ; hard space
+              (newline-mark ?\n    [?\n]) ; remove $ to not display it
+              (tab-mark     ?\t    [?\u00BB ?\t] [?\\ ?\t])))
 
- ;   (add-to-list 'custom-theme-load-path (file-name-as-directory "~/Dev/one-light-theme/"))
+   ;   (add-to-list 'custom-theme-load-path (file-name-as-directory "~/Dev/one-light-theme/"))
 
- ;   (load-theme 'one-light t t)
+   ;   (load-theme 'one-light t t)
 
- ;   (enable-theme 'one-light)
+   ;   (enable-theme 'one-light)
 
-;; Regex to set color for single whitespaces
-  ;(mapc (lambda (mode)
-          ;(font-lock-add-keywords
-          ;mode '(("\\(\\b\\|[[:graph:]]\\)\\( \\)" (1 'extr-comment -1) (2 'extra-comment t)))))
-        ;'(text-mode latex-mode mhtml-mode html-mode emacs-lisp-mode typescript-mode js2-mode  js-mode css-mode scss-mode go-mode
-          ;texinfo-mode))
+  ;; Regex to set color for single whitespaces
+    ;(mapc (lambda (mode)
+            ;(font-lock-add-keywords
+            ;mode '(("\\(\\b\\|[[:graph:]]\\)\\( \\)" (1 'extr-comment -1) (2 'extra-comment t)))))
+          ;'(text-mode latex-mode mhtml-mode html-mode emacs-lisp-mode typescript-mode js2-mode  js-mode css-mode scss-mode go-mode
+            ;texinfo-mode))
 
-(defvar my-prev-whitespace-mode nil)
-(make-variable-buffer-local 'my-prev-whitespace-mode)
-(defun pre-popup-draw ()
-  "Turn off whitespace mode before showing company complete tooltip"
-  (if whitespace-mode
-      (progn
-        (setq my-prev-whitespace-mode t)
-        (whitespace-mode -1)
-        (setq my-prev-whitespace-mode t))))
-(defun post-popup-draw ()
-  "Restore previous whitespace mode after showing company tooltip"
-  (if my-prev-whitespace-mode
-      (progn
-        (whitespace-mode 1)
-        (setq my-prev-whitespace-mode nil))))
-(advice-add 'company-pseudo-tooltip-unhide :before #'pre-popup-draw)
-(advice-add 'company-pseudo-tooltip-hide :after #'post-popup-draw)
-;(set-cursor-color "#7B1FA2")
+  (defvar my-prev-whitespace-mode nil)
+  (make-variable-buffer-local 'my-prev-whitespace-mode)
+  (defun pre-popup-draw ()
+    "Turn off whitespace mode before showing company complete tooltip"
+    (if whitespace-mode
+        (progn
+          (setq my-prev-whitespace-mode t)
+          (whitespace-mode -1)
+          (setq my-prev-whitespace-mode t))))
+  (defun post-popup-draw ()
+    "Restore previous whitespace mode after showing company tooltip"
+    (if my-prev-whitespace-mode
+        (progn
+          (whitespace-mode 1)
+          (setq my-prev-whitespace-mode nil))))
+  (advice-add 'company-pseudo-tooltip-unhide :before #'pre-popup-draw)
+  (advice-add 'company-pseudo-tooltip-hide :after #'post-popup-draw)
+  ;(set-cursor-color "#7B1FA2")
+
+  
+
 #+END_SRC
 
