Set dired dwim target

--- a/config.org
+++ b/config.org
@@ -1599,6 +1599,7 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
 
 * Misc
 #+BEGIN_SRC emacs-lisp
+  (setq dired-dwim-target t)
     (diminish 'company-mode)
     (diminish 'abbrev-mode)
     (diminish 'yas-minor-mode)
