Update neotree keybindings

--- a/config.org
+++ b/config.org
@@ -1273,15 +1273,25 @@ Maps numbers to windows on screen, allows switching windows by window number
                 (evil-define-key 'normal neotree-mode-map (kbd "q") 'neotree-hide)
                 (evil-define-key 'normal neotree-mode-map (kbd "RET") 'neotree-enter)
                 (evil-define-key 'normal neotree-mode-map (kbd "+") 'neotree-create-node)
-                (evil-define-key 'normal neotree-mode-map (kbd "g") 'neotree-refresh)
+                (evil-define-key 'normal neotree-mode-map (kbd "F") 'neotree-create-node)
+                (evil-define-key 'normal neotree-mode-map (kbd "Y") 'neotree-copy-filepath-to-yank-ring)
+                (evil-define-key 'normal neotree-mode-map (kbd "ff") 'neotree-create-node)
+                (evil-define-key 'normal neotree-mode-map (kbd "yy") 'neotree-copy-node)
+                (evil-define-key 'normal neotree-mode-map (kbd "gr") 'neotree-refresh)
+                (evil-define-key 'normal neotree-mode-map (kbd "dd") 'neotree-delete-node)
+                (evil-define-key 'normal neotree-mode-map (kbd "cc") 'neotree-rename-node)
                 (evil-define-key 'normal neotree-mode-map (kbd "n") 'neotree-next-line)
                 (evil-define-key 'normal neotree-mode-map (kbd "p") 'neotree-previous-line)
                 (evil-define-key 'normal neotree-mode-map (kbd "j") 'neotree-next-line)
                 (evil-define-key 'normal neotree-mode-map (kbd "k") 'neotree-previous-line)
                 (evil-define-key 'normal neotree-mode-map (kbd "L") 'neotree-change-root)
                 (evil-define-key 'normal neotree-mode-map (kbd "M") 'neotree-stretch-toggle)
-                (evil-define-key 'normal neotree-mode-map (kbd "R") 'neotree-rename-node)
-                (evil-define-key 'normal neotree-mode-map (kbd "H") 'neotree-hidden-file-toggle))
+                (evil-define-key 'normal neotree-mode-map (kbd "m") 'neotree-stretch-toggle)
+                ;(evil-define-key 'normal neotree-mode-map (kbd "R") 'neotree-rename-node)
+                (evil-define-key 'normal neotree-mode-map (kbd "R") 'neotree-refresh)
+                (evil-define-key 'normal neotree-mode-map (kbd "H") 'neotree-select-up-node))
+;                (evil-define-key 'normal neotree-mode-map (kbd "D") 'neotree-delete-node)
+;                (evil-define-key 'normal neotree-mode-map (kbd "X") 'neotree-delete-node))
   ;;)
     ;;)
 #+END_SRC
