Remove unused packages

--- a/config.org
+++ b/config.org
@@ -1021,90 +1021,10 @@ Display horizontal lines instead of ugly characters
   (define-key company-active-map (kbd "C-n") #'company-select-next)
   (define-key company-active-map (kbd "C-p") #'company-select-previous))
 
-(defvar company-mode/enable-yas t
-  "Enable yasnippet for all backends.")
+;(defvar company-mode/enable-yas t
+;  "Enable yasnippet for all backends.")
 ;;(setq company-backends (mapcar #'company-mode/backend-with-yas company-backends))
 (use-package company-quickhelp :ensure t)
-
-#+end_src
-
-** Yasnippet
-Needs to be looked into
-#+begin_src emacs-lisp
-;(use-package yasnippet :ensure t :defer t)
-;;  :config
-;;  (yas-global-mode 1))
-#+end_src
-
-** Treemacs
-#+begin_src emacs-lisp
-  ;; (use-package treemacs
-  ;;   :ensure t
-  ;;   :defer t
-  ;;   ;;:init
-  ;;   ;;(with-eval-after-load 'winum
-  ;;   ;;  (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
-  ;;   :config
-  ;;   (progn
-  ;;     (use-package treemacs-evil
-  ;;       :ensure t
-  ;;       :demand t)
-  ;;     (setq treemacs-change-root-without-asking nil
-  ;;           treemacs-collapse-dirs              (if (executable-find "python") 3 0)
-  ;;           treemacs-file-event-delay           5000
-  ;;           treemacs-follow-after-init          t
-  ;;           treemacs-follow-recenter-distance   0.1
-  ;;           treemacs-goto-tag-strategy          'refetch-index
-  ;;           treemacs-indentation                2
-  ;;           treemacs-indentation-string         " "
-  ;;           treemacs-is-never-other-window      nil
-  ;;           treemacs-never-persist              nil
-  ;;           treemacs-no-png-images              nil
-  ;;           treemacs-recenter-after-file-follow nil
-  ;;           treemacs-recenter-after-tag-follow  nil
-  ;;           treemacs-show-hidden-files          t
-  ;;           treemacs-silent-filewatch           nil
-  ;;           treemacs-silent-refresh             nil
-  ;;           treemacs-sorting                    'alphabetic-desc
-  ;;           treemacs-tag-follow-cleanup         t
-  ;;           treemacs-tag-follow-delay           1.5
-  ;;           treemacs-width                      35)
-
-  ;;     (treemacs-follow-mode t)
-  ;;     (treemacs-filewatch-mode t)
-  ;;     (pcase (cons (not (null (executable-find "git")))
-  ;;                  (not (null (executable-find "python3"))))
-  ;;       (`(t . t)
-  ;;        (treemacs-git-mode 'extended))
-  ;;       (`(t . _)
-  ;;        (treemacs-git-mode 'simple)))))
-  ;;(use-package treemacs-projectile
-  ;;  :defer t
-  ;;  :ensure t
-  ;;  :config
-  ;;  (setq treemacs-header-function #'treemacs-projectile-create-header))
-#+end_src
-
-** Winum
-Maps numbers to windows on screen, allows switching windows by window number
-#+begin_src emacs-lisp
-(use-package winum :ensure t
-  :defer t
-  :config
-  ;;  (setq winum-keymap
-  ;;	(let ((map (make-sparse-keymap)))
-  ;;	  (define-key map (kbd "C-0") 'winum-select-window-0-or-10)
-  ;;	  (define-key map (kbd "C-1") 'winum-select-window-1)
-  ;;	  (define-key map (kbd "M-2") 'winum-select-window-2)
-  ;;	  (define-key map (kbd "M-3") 'winum-select-window-3)
-  ;;	  (define-key map (kbd "M-4") 'winum-select-window-4)
-  ;;	  (define-key map (kbd "M-5") 'winum-select-window-5)
-  ;;	  (define-key map (kbd "M-6") 'winum-select-window-6)
-  ;;	  (define-key map (kbd "M-7") 'winum-select-window-7)
-  ;;	  (define-key map (kbd "M-8") 'winum-select-window-8)
-  ;;	  map))
-  (winum-mode)
-  )
 
 #+end_src
 
@@ -1112,11 +1032,6 @@ Maps numbers to windows on screen, allows switching windows by window number
 #+begin_src emacs-lisp
 (use-package evil-commentary :ensure t :defer t)
 #+end_src
-** Dumb Jump
-#+begin_src emacs-lisp
-;;(use-package dumb-jump :ensure t)
-#+end_src
-
 ** Indent Guide
 #+begin_src emacs-lisp
 (use-package indent-guide :ensure t
