--- a/config.org
+++ b/config.org
@@ -917,25 +917,87 @@ Add org-bullets for nice icons instead of stars
 #+end_src
 ** Ivy
 #+begin_src emacs-lisp
-(use-package ivy
-  :defer t
-  :ensure t
-  :commands (ivy-switch-buffer
-             ivy-switch-buffer-other-window)
-  :config
-  (ivy-mode 1))
+  (use-package ivy
+    :defer t
+    :ensure t
+    :commands (ivy-switch-buffer
+               ivy-switch-buffer-other-window)
+    :config
+    (ivy-mode 1)
+    (setq ivy-use-virtual-buffers t))
+
+  (use-package ivy-rich
+    :ensure t
+    :after ivy
+    ;; :custom
+    ;; (ivy-virtual-abbreviate 'full
+    ;;                         ivy-rich-switch-buffer-align-virtual-buffer t
+    ;;                         ivy-rich-path-style 'abbrev)
+    :config
+    (setq ivy-rich-path-style 'abbreviate)
+    (setq ivy-rich--display-transformers-list
+          '(ivy-switch-buffer
+            (:columns
+             ((ivy-rich-switch-buffer-icon :width 2)
+              (ivy-rich-candidate (:width 30))
+              (ivy-rich-switch-buffer-size (:width 7))
+              (ivy-rich-switch-buffer-indicators (:width 4 :face error :align right))
+              (ivy-rich-switch-buffer-major-mode (:width 12 :face warning))
+              (ivy-rich-switch-buffer-project (:width 15 :face success))
+              (ivy-rich-switch-buffer-path (:width (lambda (x) (ivy-rich-switch-buffer-shorten-path x (ivy-rich-minibuffer-width 0.3))))))
+             :predicate
+             (lambda (cand) (get-buffer cand)))
+
+            counsel-M-x
+            (:columns
+             ((counsel-M-x-transformer (:width 40))  ; thr original transfomer
+              (ivy-rich-counsel-function-docstring (:face font-lock-doc-face))))  ; return the docstring of the command
+
+
+            counsel-describe-function
+            (:columns
+             ((counsel-describe-function-transformer (:width 40))  ; the original transformer
+              (ivy-rich-counsel-function-docstring (:face font-lock-doc-face))))  ; return the docstring of the function
+
+
+            counsel-describe-variable
+            (:columns
+             ((counsel-describe-variable-transformer (:width 40))  ; the original transformer
+              (ivy-rich-counsel-variable-docstring (:face font-lock-doc-face))))  ; return the docstring of the variable
+
+
+            counsel-recentf
+            (:columns
+             ((ivy-rich-candidate (:width 0.8)) ; return the candidate itself
+              (ivy-rich-file-last-modified-time (:face font-lock-comment-face)))) ; return the last modified time of the file
+
+            )
+          )
+
+    (ivy-rich-mode 1)
+    )
+
+  (defun ivy-rich-switch-buffer-icon (candidate)
+    (with-current-buffer
+        (get-buffer candidate)
+      (let ((icon (all-the-icons-icon-for-mode major-mode)))
+        (if (symbolp icon)
+            (all-the-icons-icon-for-mode 'fundamental-mode)
+          icon))))
 #+end_src
 
 ** Counsel
 #+begin_src emacs-lisp
-(use-package counsel
-  :ensure t
-  :defer t
-  :config
-  ;;  (setq counsel-find-file-at-point t)
-  ;;  (setq counsel-locate-cmd 'counsel-locate-cmd-mdfind)
-  (setq counsel-find-file-ignore-regexp "\\.DS_Store\\|.git\\|node_modules"))
-(setq ivy-initial-inputs-alist nil)
+  (use-package counsel
+    :ensure t
+    :defer t
+    :config
+    ;;  (setq counsel-find-file-at-point t)
+    ;;  (setq counsel-locate-cmd 'counsel-locate-cmd-mdfind)
+    (setq counsel-find-file-ignore-regexp "\\.DS_Store\\|.git\\|node_modules"))
+  (setq ivy-initial-inputs-alist nil)
+
+  (use-package smex :ensure t)
 #+end_src
 
 ** Projectile
