--- a/config.org
+++ b/config.org
@@ -680,6 +680,7 @@ Add org-bullets for nice icons instead of stars
         "bibtex %b"
         "pdflatex -interaction nonstopmode -output-directory %o %f"
         "pdflatex -interaction nonstopmode -output-directory %o %f"))
+;; Allows source code execution with C-C C-c
 (org-babel-do-load-languages
  'org-babel-load-languages
  '((python . t)
