--- a/config.org
+++ b/config.org
@@ -574,6 +574,10 @@
 
   ;;    (setq evil-ex-nohighlight t)
   ;; More configuration goes here
+  (define-key evil-normal-state-map (kbd "j") 'evil-next-visual-line)
+  (define-key evil-normal-state-map (kbd "k") 'evil-previous-visual-line)
+  (define-key evil-visual-state-map (kbd "j") 'evil-next-visual-line)
+  (define-key evil-visual-state-map (kbd "k") 'evil-previous-visual-line)
   )
 #+end_src
 
