--- a/config.org
+++ b/config.org
@@ -191,23 +191,62 @@
 #+END_SRC
 ** Theme
 #+begin_src emacs-lisp
-  ;; (use-package base16-theme :ensure t)
-  ;; (setq dark-theme nil)
-  ;; (use-package gruvbox-theme :ensure t)
+    (use-package base16-theme :ensure t
+      :config
+      (setq base16-distinct-fringe-background nil))
 
-  ;; (if dark-theme
-      ;; (load-theme 'base16-materia)
-      ;; (load-theme 'gruvbox-dark-soft)
+  ;  (use-package creamsody-theme :ensure t) ;; overwrites stuff so only execute once manually and then comment out again..
+
+    (while (progn
+             (setq answer (downcase (char-to-string (read-char "Do you want to code [c] or write [w] "))))
+             (not (or (string-equal answer "c") (string-equal answer "w") (string-equal answer "x")))))
+
+    ;; (cond ((string-equal answer "c") (load-theme 'base16-material))
+  (cond ((string-equal answer "c")
+         (load-theme 'creamsody)
+         (creamsody-modeline-four))
+          ((string-equal answer "w")
+           (load-theme 'base16-solarized-light)
+           (set-face-background 'mode-line "#cfdeee")))
+
+    ;; (use-package base16-theme :ensure t)
+    ;; (setq dark-theme nil)
+    ;; (use-package gruvbox-theme :ensure t)
+
+    ;; (if dark-theme
+    ;; (load-theme 'base16-materia)
+    ;; (load-theme 'gruvbox-dark-soft)
     ;; (load-theme 'gruvbox-light-medium))
     ;; (load-theme 'base16-material-lighter))
 
 
-  ;;(load-theme 'base16-material-lighter)
-  ;;(load-theme 'base16-one-light)
-  ;; (load-theme 'base16-harmonic-light)
+    ;;(load-theme 'base16-material-lighter)
+    ;;(load-theme 'base16-one-light)
+    ;; (load-theme 'base16-harmonic-light)
 
-  (use-package one-themes :ensure t
-   :init (load-theme 'one-light t))
+    ;; (use-package one-themes 
+    ;;  :init (load-theme 'one-light t))
+    ;; (load-theme 'base16-flat)
+                                            ;  (load-theme 'base16-harmonic-light)
+
+                                            ;   (load-theme 'base16-porple)
+    ;; (load-theme 'base16-material)
+    ;; (load-theme 'base16-material-palenight)
+                                            ;   (load-theme 'base16-one-light)
+                                            ;  (load-theme 'base16-unikitty-light)
+
+
+                                            ;(use-package darktooth-theme :ensure t)
+                                            ;(load-theme 'darktooth)
+
+                                            ;(set-face-foreground 'mode-line-buffer-id "purple")
+                                            ;(set-face-background 'mode-line "#44475a") ; for dark themes
+
+
+    ;; p(set-face-background 'mode-line "#cfdeee")
+
+    ;; (load-theme 'base16-solarized-light)
+    ;; (set-face-background 'mode-line "#cfdeee") ; for light themes
 #+end_src
 
 
